--- a/interview2.html
+++ b/interview2.html
@@ -48,7 +48,7 @@
 
   <section class="image-block">
     <img src="interview-middle.jpg" alt="豊川稲荷と夜景">
-    <p class="caption">年末の豊川稲荷。静けさと賑わいが交差する夜。</p>
+    <p class="caption2">年末の豊川稲荷。静けさと賑わいが交差する夜。</p>
   </section>
 
   <section class="image-block">
@@ -249,7 +249,7 @@
 
   <section class="image-block">
     <img src="interview-middle2.jpg" alt="肉塊Xとゆな">
-    <p class="caption">バターの匂いで、未練が一個溶けた。</p>
+    <p class="caption2">バターの匂いで、未練が一個溶けた。</p>
   </section>
 
 
@@ -361,7 +361,7 @@
 
   <section class="image-block">
     <img src="interview-last.jpg" alt="二人が並んで歩く夜">
-    <p class="caption">夜の帰り道。並んで歩く二人。</p>
+    <p class="caption2">夜の帰り道。並んで歩く二人。</p>
   </section>
 
   <section class="profile">
@@ -390,3 +390,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
